--- a/maidle-front/package.json
+++ b/maidle-front/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "maidle-front",
+  "name": "tmp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/figtree": "^5.2.10",
+    "@fontsource/inter": "^5.2.8",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
